[gd_scene load_steps=4 format=3 uid="uid://dpv2or6jsyiwe"]

[ext_resource type="Script" uid="uid://coygfq4aif7oi" path="res://source/editor/interfaces/provinces/province_list_element.gd" id="1_lfp47"]
[ext_resource type="StyleBox" uid="uid://bmln1elnj0h8" path="res://resources/style_blueish.tres" id="2_6uon8"]
[ext_resource type="Texture2D" uid="uid://dlk4vjy5lgeuu" path="res://assets/icon.svg" id="3_pj0ym"]

[node name="ProvinceListElement" type="Control"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_lfp47")

[node name="Button" type="Button" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/normal = ExtResource("2_6uon8")

[node name="ShapePreview" type="TextureRect" parent="Button"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.25
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("3_pj0ym")
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="Button"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.85
grow_vertical = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "sample text"
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
